--- a/package.json
+++ b/package.json
@@ -1,26 +1,64 @@
 {
-    "name": "optgen",
-    "displayName": "Optgen Language Support",
-    "description": "Language support for optimizer generator (optgen) files containing operator definitions and matching/replace rules.",
-    "version": "0.0.2",
-    "publisher": "xiaochen-cui",
-    "engines": {
-        "vscode": "^1.19.0"
-    },
-    "categories": [
-        "Programming Languages"
+  "name": "optgen-vscode",
+  "displayName": "optgen-vscode",
+  "description": "",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.84.0"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "activationEvents": [],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "optgen-vscode.helloWorld",
+        "title": "Hello World"
+      }
     ],
-    "contributes": {
-        "languages": [{
-            "id": "optgen",
-            "aliases": ["Optgen", "optgen"],
-            "extensions": [".opt"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "optgen",
-            "scopeName": "source.optgen",
-            "path": "./syntaxes/optgen.tmLanguage"
-        }]
-    }
+    "languages": [
+      {
+        "id": "optgen",
+        "aliases": [
+          "Optgen",
+          "optgen"
+        ],
+        "extensions": [
+          ".opt"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "optgen",
+        "scopeName": "source.optgen",
+        "path": "./syntaxes/optgen.tmLanguage"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "vscode-test"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.84.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "18.x",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "typescript": "^5.3.2",
+    "@vscode/test-cli": "^0.0.4",
+    "@vscode/test-electron": "^2.3.8"
+  },
+  "capabilities": {
+    "documentSymbolProvider": "true"
+  }
 }
